log/build_2022-03-30_19-50-25/xsens_driver/stderr.log
  File "/app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver/xsens_measure.py", line 102
    if d > self.rtcmRefreshDist
                              ^
SyntaxError: invalid syntax

